[gd_scene load_steps=5 format=3 uid="uid://puuhou3vf11u"]

[ext_resource type="Script" path="res://ui/menus/CraftingMenu/subnodes/scripts/Ingredient.gd" id="1_dhnvd"]
[ext_resource type="Texture2D" uid="uid://ct0jdm3g86l0a" path="res://ui/menus/CraftingMenu/assets/Ingredients.png" id="2_6ewmh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68fvb"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_wv8no"]
radius = 0.01

[node name="Ingredient" type="CharacterBody2D" groups=["IngredientUI"]]
script = ExtResource("1_dhnvd")

[node name="IngredientSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_6ewmh")
hframes = 2
vframes = 2

[node name="MouseDetection" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 0

[node name="MouseDetectionShape" type="CollisionShape2D" parent="MouseDetection"]
shape = SubResource("RectangleShape2D_68fvb")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wv8no")

[connection signal="mouse_entered" from="MouseDetection" to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetection" to="." method="_mouse_exited"]
